src/objects/Session__c.object
<CustomObject>
    <description>This object describes each session within an Event</description>
    <fields>
        <fullName>AM_Disclosure_Slides__c</fullName>
        <description>##Conga created button:00b02000000MIVj</description>
        <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;queryid=[AMSessions]a2T1I000000GXai&quot; + 
&quot;&amp;templateid=a2b0200000018ne&quot; + 
&quot;&amp;ofn=&quot; + Session_Code__c +
&quot;&amp;apf=1&quot; + 
&quot;&amp;qmode=Download&quot;</formula>
        <label>AM Disclosure Slides</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Session_Slides__c</fullName>
        <description>##Conga created button:00b1I000001cm2j</description>
        <formula>&quot;&amp;solmgr=1&quot; + 
&quot;&amp;id=&quot; + Id +
&quot;&amp;queryid=[SessionQuery]a2T1I000000GXai&quot; + 
&quot;&amp;templateid=a2b1I000000G913&quot; + 
&quot;&amp;ofn=&quot;+ Session_Code__c +
&quot;&amp;apf=1&quot; + 
&quot;&amp;qmode=Download&quot;</formula>
        <label>Create Session Slides</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <label>Day</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>EventApi__Event__c</referenceTo>
        <relationshipLabel>Sessions</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Live_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Live Event</label>
        <referenceTo>BR_Event__c</referenceTo>
        <relationshipLabel>Sessions</relationshipLabel>
        <relationshipName>CLSessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Moderator__c</fullName>
        <label>Moderator(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Publishing_Title__c</fullName>
        <label>Publishing Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Code__c</fullName>
        <formula>Day__c &amp; &apos; &apos; &amp; IF(LEN(TEXT(Hour(Time__c)))=1,&apos;0&apos;&amp;Text(Hour(Time__c)), Text(Hour(Time__c))) 
&amp; IF(Minute(Time__c)=0,&apos;00&apos;, Text(Minute(Time__c))) 
&amp; &apos; &apos; &amp; Session_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Date__c</fullName>
        <label>Session Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Session_Name__c</fullName>
        <label>Session Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Number__c</fullName>
        <label>Session Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <type>Time</type>
    </fields>
    <label>Session</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Event__c</columns>
        <columns>Session_Name__c</columns>
        <columns>Session_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>